Applied OpenRewrite recipes for Java 21 and Spring Security 6 upgrade. Updated Spring Boot version to 3.4.2 and Thymeleaf Security dependency to springsecurity6.